--- a/style.css
+++ b/style.css
@@ -1,7 +1,57 @@
-
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  margin:0;
+  padding:0;
+}
+
+.wrapper {
+  padding:20px;
+  position:relative;
+}
+
+.wrapper ul {
+  list-style:none;
+  text-align: center;
+  margin-top: 29px;
+}
+
+.wrapper h1 {
+  text-align:center;
+}
+
+#next {
+  padding: 14px;
+  background: #ffaf07;
+  border-radius: 8px;
+  cursor:pointer;
+}
+
+#prev {
+  padding: 14px;
+  background: #ffaf07;
+  border-radius: 8px;
+  cursor:pointer;
+}
+
+.bottoni {
+  margin:auto;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.templates {
+  display: none;
+
+
+}
+
+.templates li {
+  list-style: none;
+}
+li.active {
+  color: red;
+}
+
+li {
+  font-size:18px;
 }
