--- a/style.css
+++ b/style.css
@@ -12,7 +12,12 @@
 .wrapper ul {
   list-style:none;
   text-align: center;
-  margin-top: 29px;
+  width: 400px;
+  margin: auto;
+  margin-top: 30px;
+  padding: 35px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px #000;
 }
 
 .wrapper h1 {
