--- a/style.css
+++ b/style.css
@@ -1,62 +1,45 @@
+
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  margin:0;
-  padding:0;
+  font-family: 'Cabin';
 }
 
-.wrapper {
-  padding:20px;
+.container {
+  width:100%;
   position:relative;
 }
 
-.wrapper ul {
-  list-style:none;
-  text-align: center;
-  width: 400px;
-  margin: auto;
-  margin-top: 30px;
-  padding: 35px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 12px #000;
+.navbar {
+  height: 80px;
+  background:#000;
+  border-bottom:1px solid #fff;
+  padding: 19px;
 }
 
-.wrapper h1 {
-  text-align:center;
+.navigation {
+  padding: 29px;
+  background: #000;
+  border-bottom: 1px solid #fff;
 }
 
-#next {
-  padding: 14px;
-  background: #ffaf07;
-  border-radius: 8px;
-  cursor:pointer;
+#ricerca {
+  padding:10px;
+  width: 289px;
 }
 
-#prev {
-  padding: 14px;
-  background: #ffaf07;
-  border-radius: 8px;
-  cursor:pointer;
+#bottone {
+  padding:10px;
 }
 
-.bottoni {
-  margin:auto;
-  text-align: center;
-  margin-top: 20px;
+
+#entry-template {
+  font-size:20px;
 }
 
-.templates {
-  display: none;
-
-
-}
-
-.templates li {
-  list-style: none;
-}
-li.active {
-  color: red;
-}
-
-li {
-  font-size:18px;
+.lista_film {
+  font-size:20px;
+  margin-left: 39px;
+  margin-top: 58px;
 }
