--- a/style.css
+++ b/style.css
@@ -106,15 +106,18 @@ td, th {
   height:auto;
 }
 
-table {
-  padding: 50px;
+.card {
   transition: transform .2s; /* Animation */
   margin: 0 auto;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin-bottom: 0px;
+  margin-top: 20px;
   cursor:pointer;
 }
 
-table:hover {
+.card:hover {
   transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.bandiera {
+  height:14px;
 }
